<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/activity_launch_menu_action_logout"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="never"/>

    <item
        android:id="@+id/activity_launch_menu_action_refresh"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/activity_launch_menu_action_postTweet"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/newTweet"/>
</menu>