<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PostTweetActivity">

    <EditText
        android:id="@+id/activity_post_tweet_message_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/post_tweet_hint"/>

    <Button
        android:id="@+id/activity_post_tweet_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PostTweet"
        android:layout_below="@id/activity_post_tweet_message_editText"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/activity_post_tweet_counter_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/activity_post_tweet_send_button"
        android:text="@string/characterCount"/>

    <TextView
        android:id="@+id/activity_post_tweet_errorMessage_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_post_tweet_send_button"
        android:layout_centerHorizontal="true"
        android:textColor="@color/red"/>
</RelativeLayout>
